# anomaly-detection-system

./: .dockerignore  .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
config/: settings.py
frontend/: app.js  index.html  styles.css
models/: fraud_detection_feature_engineer.pkl  fraud_detection_metadata.json  fraud_detection_model.pkl  fraud_detection_threshold.json
scripts/: generate_data.py  prepare_ieee_data.py  train.py
src/api/: app.py  endpoints.py  store.py
src/data/: __init__.py  loader.py  schemas.py  synthetic.py
src/features/: __init__.py  cold_start.py  deviation.py  pipeline.py  temporal.py  transaction.py  user_aggregates.py  velocity.py
src/mcp/: __init__.py  decision_store.py  schemas.py  server.py  tools.py
src/models/: __init__.py  baseline.py  evaluation.py  serialization.py  threshold.py
src/static/: app.js  index.html
tests/: test_api.py  test_features.py
